--- a/css/albumes.css
+++ b/css/albumes.css
@@ -1,34 +1,17 @@
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
-    line-height: 2.6;
-    color: #fff;
-      
+    font-family: 'Open Sans', sans-serif;
 }
-
-body {
-    background-image: url(../media/fondo.albumes.jpg);
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
-    min-height: 100vh;
-}
-
 header {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr auto;
     justify-content: space-between;
     align-items: center;
-    background-color: #0e2940;
-}
-
-header {
+    background-color: #0e2940; 
     width: 100%;
-    padding: 0;
-    z-index: 1000px;
-    margin-bottom: 3vh;
+    z-index: 1000;
 }
 
 
@@ -67,8 +50,163 @@ header {
     background-color: rgba(255, 255, 255, 0.2); 
 }
 
+
+
+body{
+    background: #eaeaea;
+    overflow: hidden;
+}
+
+
+.container{
+    position:absolute;
+    top: 59%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 1000px;
+    height: 540px;
+    background: #373535;
+    box-shadow: 0 30px 50px #dbdbdb;
+}
+
+.container .slide .item{
+    width: 160px;
+    height: 260px;
+    position: absolute;
+    top: 40%;
+    transform: translate(0, -50%);
+    border-radius: 20px;
+    box-shadow: 0 30px 50px #505050;
+    background-position: 50% 50%;
+    background-size: cover;
+    display: inline-block;
+    transition: 0.5s;
+}
+
+.slide .item:nth-child(1),
+.slide .item:nth-child(2){
+    top: 0;
+    left: 0;
+    transform: translate(0, 0);
+    border-radius: 0;
+    width: 100%;
+    height: 100%;
+}
+
+
+.slide .item:nth-child(3){
+    left: 50%;
+}
+.slide .item:nth-child(4){
+    left: calc(50% + 170px);
+}
+.slide .item:nth-child(5){
+    left: calc(50% + 340px);
+}
+
+.slide .item:nth-child(n + 6){
+    left: calc(50% + 510px);
+    opacity: 0;
+}
+
+
+
+.item .content{
+    position: absolute;
+    top: 40%;
+    left: 100px;
+    width: 300px;
+    text-align: left;
+    color: #ffffff ;
+    -webkit-text-stroke: #000000;
+    transform: translate(0, -50%);
+    font-family: system-ui;
+    display: none;
+}
+
+
+.slide .item:nth-child(2) .content{
+    display: block;
+}
+
+.name{
+    text-align: center;
+    color: #fff;
+    background-color: #503f3f;
+}
+
+.des{
+    text-align: center;
+    color: #fff;
+    background-color: #3c3636;
+}
+
+.content .name{
+    font-size: 40px;
+    text-transform: uppercase;
+    font-weight: bold;
+    opacity: 0;
+    animation: animate 1s ease-in-out 1 forwards;
+}
+
+.content .des{
+    margin-top: 10px;
+    margin-bottom: 20px;
+    opacity: 0;
+    animation: animate 1s ease-in-out 0.3s 1 forwards;
+}
+
+.content button{
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    opacity: 0;
+    animation: animate 1s ease-in-out 0.6s 1 forwards;
+}
+
+
+@keyframes animate {
+    from{
+        opacity: 0;
+        transform: translate(0, 100px);
+        filter: blur(33px);
+    }
+
+    to{
+        opacity: 1;
+        transform: translate(0);
+        filter: blur(0);
+    }
+}
+
+
+
+.button{
+    width: 100%;
+    text-align: center;
+    position: absolute;
+    bottom: 55px;
+}
+
+.button button{
+    width: 40px;
+    height: 35px;
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    margin: 0 5px;
+    border: 1px solid #000;
+    transition: 0.3s;
+}
+
+.button button:hover{
+    background: #a7b990;
+    color: #064a92;
+}
+
 .footer {
     background-color: #0e2940;
+    color: white;
     padding: 1em;
     text-align: center;
     position: absolute;
