--- a/css/musicos.css
+++ b/css/musicos.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     line-height: 2.6;
     color: white;
 }
@@ -89,16 +89,23 @@ main {
 .musico .textos {
     width: 100%;
     display: grid;
-    grid-template-rows: 3fr 1fr;
+    grid-template-rows: 2fr 1fr;
     text-align: left;
     justify-content: space-between;
+}
+.musico:nth-child(5) .textos p {
+    margin-top: 40px; 
 }
 
 .h-2 {
     display: grid;
     justify-content: center;
     padding: 50px 0 1px;
-}
+    font-family: "Open Sans", sans-serif; 
+    font-size: 40px;
+    color: rgba(255, 255, 255, 0.76); 
+    -webkit-text-stroke: 1rem rgba(250, 250, 250, 0.205);  
+} 
 
 .footer {    
     display: grid;
