--- a/css/acercade.css
+++ b/css/acercade.css
@@ -13,7 +13,6 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-attachment: fixed;
     min-height: 100vh;
 }
 
@@ -126,7 +125,7 @@ input[type="option"] {
     box-sizing: border-box;
     font-family: 'Open Sans', sans-serif;
     color: #0e2940;
-    background-color: #fff; /* Fondo blanco para mejor contraste */
+    background-color: #fff; 
 }
 
 input[type="text"]:focus,
