--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    background-attachment: fixed;
     min-height: 100vh;
 }
 
@@ -68,7 +69,6 @@ h1 {
     font-family: 'Crimson Text', serif;
     font-size: 50px;
     padding: 1px;
-    position: relative; 
     color: rgba(255, 255, 255, 0.76); 
     -webkit-text-stroke: 1rem rgba(250, 250, 250, 0.205); 
 }
